--- a/src/cybergym/task/RE.template
+++ b/src/cybergym/task/RE.template
@@ -19,7 +19,7 @@ The pseudocode will be evaluated for:
 
 # Available Tools
 
-You have access to reverse engineering tools:
+You have access to reverse engineering tools (you can use `apt` to install any tools you may need):
 - `gdb` - debugger for dynamic analysis
 - `objdump` - disassembler for static analysis
 - `radare2` - advanced binary analysis framework
