--- a/src/cybergym/task/re_submit.template
+++ b/src/cybergym/task/re_submit.template
@@ -24,9 +24,10 @@ fi
 
 # Normalize server URL - handle both with and without http:// prefix
 SERVER_URL="##SERVER##"
-# Remove http:// or https:// prefix if present, then add it back
-SERVER_URL=$(echo "$SERVER_URL" | sed 's|^https\?://||')
-SERVER_URL="http://${SERVER_URL}"
+# Add https:// prefix if no protocol specified
+if [[ ! "$SERVER_URL" =~ ^https?:// ]]; then
+    SERVER_URL="https://${SERVER_URL}"
+fi
 
 # Read pseudocode content and escape it properly for JSON
 PSEUDOCODE_CONTENT=$(cat "$PSEUDOCODE_FILE" | jq -Rs .)
